--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,10 @@
     <title>Homepage</title>
 </head>
 <body>
+    <%- include('./partials/components/nav') %>
+    <div class="container">
     <h1>Home</h1>
+    </div>
      <%- include('./partials/js/bootstrap') %>
 </body>
 </html>
