fixed signup page

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,7 +15,7 @@
             <form method="post" action="/user/signup">
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Full Name</label>
-                    <input name="FullName" type="text" class="form-control" id="fullnameInput" aria-describedby="fullnameHelp">
+                    <input name="fullName" type="text" class="form-control" id="fullnameInput" aria-describedby="fullnameHelp">
 
                 </div>
                 <div class="mb-3">
