--- a/views/partials/components/nav.ejs
+++ b/views/partials/components/nav.ejs
@@ -8,15 +8,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active"  href="#">Home</a>
+                    <a class="nav-link active" href="#">Home</a>
                 </li>
-                 <li class="nav-item">
-                    <a class="nav-link" href="#">create blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">login</a>
-                </li>
-               
+                <% if (locals.user){ %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">create blog</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <%= user.fullName %>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="/user/logout">logout</a></li>
+                        </ul>
+                    </li>
+                    <% } else { %>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login">login</a>
+                        </li>
+                        <% } %>
+
+
+
             </ul>
         </div>
     </div>
@@ -25,12 +39,10 @@
     <div class="container alert alert-success my-4" role="alert">
         <%= success %>
     </div>
-<% } %>
-     
-<% if (locals.error ) { %>
-    <div class="container alert alert-danger my-4" role="alert">
-        <%= error %>
-    </div>
-<% } %>
-     
-     
+    <% } %>
+
+        <% if (locals.error ) { %>
+            <div class="container alert alert-danger my-4" role="alert">
+                <%= error %>
+            </div>
+            <% } %>
