--- a/views/partials/components/nav.ejs
+++ b/views/partials/components/nav.ejs
@@ -12,7 +12,7 @@
                 </li>
                 <% if (locals.user){ %>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">create blog</a>
+                        <a class="nav-link" href="/blog/create">create blog</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
