home page, blog page create

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <%- include('./partials/css/bootstrap') %>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Homepage</title>
 </head>
+
 <body>
     <%- include('./partials/components/nav') %>
-    <div class="container">
-    <h1>Home</h1>
-    </div>
-     <%- include('./partials/js/bootstrap') %>
+
+        <div class="container">
+            <div class="row mt-5">
+            <% blogs.forEach(blog=> { %>
+                <div class="card mx-2  col" style="width: 18rem;">
+                    <img src="/uploads/<%= blog.coverImage %>" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><%= blog.title%></h5>
+                        
+                        <a href="/blog/view/<%= blog._id %>" class="btn btn-primary">view</a>
+                    </div>
+                </div>
+                <% }) %>
+                </div>
+
+        </div>
+        <%- include('./partials/js/bootstrap') %>
 </body>
+
 </html>
