--- a/views/partials/components/nav.ejs
+++ b/views/partials/components/nav.ejs
@@ -1,15 +1,13 @@
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Guvi Blogs</a>
+        <a class="navbar-brand" href="/">Guvi Blogs</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
-                </li>
+                
                 <% if (locals.user){ %>
                     <li class="nav-item">
                         <a class="nav-link" href="/blog/create">create blog</a>
@@ -28,9 +26,6 @@
                             <a class="nav-link" href="/login">login</a>
                         </li>
                         <% } %>
-
-
-
             </ul>
         </div>
     </div>
