--- a/views/partials/components/nav.ejs
+++ b/views/partials/components/nav.ejs
@@ -7,7 +7,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                
+
                 <% if (locals.user){ %>
                     <li class="nav-item">
                         <a class="nav-link" href="/blog/create">create blog</a>
@@ -18,6 +18,7 @@
                             <%= user.fullName %>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="/user/blogs">my blogs</a></li>
                             <li><a class="dropdown-item" href="/user/logout">logout</a></li>
                         </ul>
                     </li>
