added viws and structured the code

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,6 +18,7 @@
                     <img src="/uploads/<%= blog.coverImage %>" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><%= blog.title%></h5>
+                        <p> <%= blog.views%> views</p>
                         
                         <a href="/blog/view/<%= blog._id %>" class="btn btn-primary">view</a>
                     </div>
