--- a/views/partials/components/nav.ejs
+++ b/views/partials/components/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Guvi Blogs</a>
+        <a class="navbar-brand" href="/">Node Blogs</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
                     </li>
                     <% } else { %>
                         <li class="nav-item">
-                            <a class="nav-link" href="/login">login</a>
+                            <a class="nav-link" href="/login">login/signup</a>
                         </li>
                         <% } %>
             </ul>
